@@ -1,13 +1,15 @@
 package org.jabref.gui.theme;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.util.Optional;
 
-import org.jabref.gui.JabRefFrame;
+import org.jabref.gui.JabRefGUI;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -30,7 +32,7 @@ abstract class StyleSheet {
     abstract void reload();
 
     static Optional<StyleSheet> create(String name) {
-        Optional<URL> styleSheetUrl = Optional.ofNullable(JabRefFrame.class.getResource(name));
+        Optional<URL> styleSheetUrl = Optional.ofNullable(JabRefGUI.class.getResource(name));
 
         if (styleSheetUrl.isEmpty()) {
             try {
@@ -44,8 +46,8 @@ abstract class StyleSheet {
 
         if (styleSheetUrl.isEmpty()) {
             try {
-                return Optional.of(new StyleSheetDataUrl(new URL(EMPTY_WEBENGINE_CSS)));
-            } catch (MalformedURLException e) {
+                return Optional.of(new StyleSheetDataUrl(new URI(EMPTY_WEBENGINE_CSS).toURL()));
+            } catch (URISyntaxException | MalformedURLException e) {
                 return Optional.empty();
             }
         } else if ("file".equals(styleSheetUrl.get().getProtocol())) {
